2D staff textures work!!!!