@@ -1,5 +1,7 @@
 package net.dulidanci.staffmod.render.model;
 
+import net.dulidanci.staffmod.StaffMod;
+import net.dulidanci.staffmod.util.json.ModelTransformationLoader;
 import net.fabricmc.fabric.api.renderer.v1.model.FabricBakedModel;
 import net.fabricmc.fabric.api.renderer.v1.render.RenderContext;
 import net.minecraft.block.BlockState;
@@ -7,13 +9,19 @@ import net.minecraft.client.render.model.BakedModel;
 import net.minecraft.client.render.model.BakedQuad;
 import net.minecraft.client.render.model.json.ModelOverrideList;
 import net.minecraft.client.render.model.json.ModelTransformation;
+import net.minecraft.client.render.model.json.ModelTransformationMode;
+import net.minecraft.client.render.model.json.Transformation;
 import net.minecraft.client.texture.Sprite;
+import net.minecraft.client.util.math.MatrixStack;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.random.Random;
 import net.minecraft.world.BlockRenderView;
 import org.jetbrains.annotations.Nullable;
+import org.joml.Quaternionf;
+import org.joml.Vector3f;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -36,8 +44,31 @@ public class StaffBakedModel implements BakedModel, FabricBakedModel {
 
     @Override
     public void emitItemQuads(ItemStack stack, Supplier<Random> randomSupplier, RenderContext context) {
+        ModelTransformation ModelTransformation = ModelTransformationLoader.getOrLoadModelTransformation(new Identifier(StaffMod.MOD_ID, "display/core_transformation.json"));
+//
+//        for (ModelTransformationMode mode : ModelTransformationMode.values()) {
+//            StaffMod.LOGGER.info("Getting Transformation for mode {}", mode);
+//            Transformation transformation = ModelTransformation.getTransformation(mode);
+//
+//            MatrixStack matrixStack = new MatrixStack();
+//            matrixStack.multiply(new Quaternionf().rotationXYZ(
+//                transformation.rotation.x * (float) (Math.PI / 180.0),
+//                transformation.rotation.y * (float) (Math.PI / 180.0),
+//                transformation.rotation.z * (float) (Math.PI / 180.0)));
+//            matrixStack.translate(transformation.translation.x, transformation.translation.y, transformation.translation.z);
+//            System.out.println(transformation.translation.x);
+//            System.out.println(transformation.translation.y);
+//            System.out.println(transformation.translation.z);
+//            matrixStack.scale(transformation.scale.x, transformation.scale.y, transformation.scale.z);
+//
+//            core.getTransformation().getTransformation(mode).apply(
+//                    mode == ModelTransformationMode.FIRST_PERSON_LEFT_HAND || mode == ModelTransformationMode.THIRD_PERSON_LEFT_HAND,
+//                              matrixStack);
+//        }
+//
+//        StaffMod.LOGGER.info("emitItemQuads ran!");
         staff.emitItemQuads(stack, randomSupplier, context);
-//        core.emitItemQuads(stack, randomSupplier, context);
+        core.emitItemQuads(stack, randomSupplier, context);
     }
 
     @Override
@@ -47,7 +78,7 @@ public class StaffBakedModel implements BakedModel, FabricBakedModel {
 
     @Override
     public List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction face, Random random) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
